shim/shim.h

    /* Opaque types — defined in the vendored bmesh headers. */
    typedef struct BMesh BMesh;
    typedef struct BMVert BMVert;
    typedef struct BMEdge BMEdge;
    typedef struct BMFace BMFace;
    /* Invoke BMesh's `dissolve_verts` operator on the supplied vertex set.
     * Exposes both BMOP slot parameters explicitly:
     *
     *   - `use_face_split`     — split off face corners around dissolved verts
     *                            so surrounding geometry stays well-formed.
     *   - `use_boundary_tear`  — split off face corners on boundary verts
     *                            instead of merging adjacent faces.
     *
     * Returns true on success, false if BMO_op_initf rejected the input. */
    bool bms_dissolve_verts(BMesh *bm,
                            BMVert **verts, int verts_len,
                            bool use_face_split,
                            bool use_boundary_tear);
    /* Invoke BMesh's `dissolve_edges` operator on the supplied edge set.
     * Exposes every BMOP slot parameter explicitly:
     *
     *   - `use_verts`         — also dissolve any vert left between exactly
     *                           two surviving edges.
     *   - `use_face_split`    — split off face corners to keep surrounding
     *                           geometry well-formed.
     *   - `angle_threshold`   — when `use_verts` is true, only dissolve a
     *                           vert if the angle between its remaining two
     *                           edges is at most this value (radians). Use
     *                           `M_PI` to disable the angle limit (matches
     *                           the BMOP's own default).
     *
     * Returns true on success, false if BMO_op_initf rejected the input. */
    bool bms_dissolve_edges(BMesh *bm,
                            BMEdge **edges, int edges_len,
                            bool use_verts,
                            bool use_face_split,
                            float angle_threshold);
    /* Invoke BMesh's `dissolve_faces` operator on the supplied face set.
     * Partitions the set into edge-adjacent connected components and merges
     * each component into a single face. Exposes both BMOP slot parameters
     * explicitly:
     *
     *   - `use_verts`         — after merging, also dissolve any vert left
     *                           between exactly two surviving edges.
     *
     * Returns true on success, false if BMO_op_initf rejected the input. */
    bool bms_dissolve_faces(BMesh *bm,
                            BMFace **faces, int faces_len,
                            bool use_verts);
    /* Capturing variant of `bms_dissolve_faces`.
     *
     * Runs the same `dissolve_faces` BMOP but, in addition to performing
     * the surgery, copies the operator's `region.out` slot (the merged
     * faces produced by each successful per-region merge) into the
     * caller-supplied buffer `out_buf` of capacity `out_cap` face slots.
     *
     * Return value:
     *   -1  on operator init failure (matches the `false` return of the
     *       non-capturing variant).
     *   >= 0 on success: the *total* number of merged faces the slot
     *       produced. Up to `min(total, out_cap)` pointers are written
     *       to `out_buf` (in the slot's emit order). If the returned
     *       count exceeds `out_cap`, the buffer was undersized — the
     *       caller can detect overflow and re-call with a larger buffer
     *       on a fresh fixture.
     *
     * `out_buf` may be null only when `out_cap` is zero; in that case
     * the function still runs the operator and returns the merged-face
     * count for sizing purposes. */
    int bms_dissolve_faces_out(BMesh *bm,
                               BMFace **faces, int faces_len,
                               bool use_verts,
                               BMFace **out_buf, int out_cap);
    bool bms_dissolve_limit(BMesh *bm,
                            BMEdge **edges, int edges_len,
                            BMVert **verts, int verts_len,
                            float angle_limit,
                            bool use_dissolve_boundaries,
                            int delimit);
    /* Capturing variant of `bms_dissolve_limit`.
     *
     * Runs the same `dissolve_limit` BMOP but, in addition to performing
     * the surgery, copies the operator's `region.out` slot (the merged
     * faces produced by each successful edge-pass merge, in heap-pop
     * order) into the caller-supplied buffer `out_buf` of capacity
     * `out_cap` face slots.
     *
     * Return value matches `bms_dissolve_faces_out` (see above): -1 on
     * init failure; otherwise the total slot count, with up to
     * `min(total, out_cap)` pointers written to `out_buf`. `out_buf`
     * may be null only when `out_cap` is zero. */
    int bms_dissolve_limit_out(BMesh *bm,
                               BMEdge **edges, int edges_len,
                               BMVert **verts, int verts_len,
                               float angle_limit,
                               bool use_dissolve_boundaries,
                               int delimit,
                               BMFace **out_buf, int out_cap);
    /* Invoke BMesh's `dissolve_degenerate` operator on the supplied edge set.
     * Numeric cleanup pass: collapses every input edge shorter than `dist`,
     * then clips degenerate "ear" loops on the still-present faces (loops
     * whose two incident edges are collinear within `dist`).
     *
     * Parameters map 1:1 onto the operator's slots:
     *
     *   - `dist`  — distance tolerance (world units). Edges with squared
     *               length below `dist * dist` are collapsed; loop ears
     *               whose collinearity error is at most `dist` are split
     *               and the introduced joining edge is also collapsed.
     *               At `dist = 0` only exact-zero-length edges and exactly
     *               collinear ears qualify; in practice a sanity-check pass.
     *
     * The `edges` buffer may be null with a zero length, in which case the
     * operator iterates the whole mesh but the input-flag check (which gates
     * the per-edge length test) is never satisfied — so passing a zero-length
     * input set is effectively a no-op even if the mesh contains degeneracies.
     * Callers wanting a whole-mesh cleanup should pass every edge.
     *
     * Returns true on success, false if BMO_op_initf rejected the input. */
    bool bms_dissolve_degenerate(BMesh *bm,
                                 BMEdge **edges, int edges_len,
                                 float dist);
    /* Invoke BMesh's `collapse` operator on the supplied edge set. Collapses
     * each connected group of input edges to a single vertex, welding their
     * endpoints together and removing the now-degenerate geometry.
     *
     * Parameters map 1:1 onto the operator's slots:
     *
     *   - `edges` — the edges to collapse. The buffer may be null only when
     *               `edges_len == 0`, in which case nothing is collapsed.
     *   - `uvs`   — when true, also blend the per-loop custom data (UVs,
     *               vertex colours, etc.) of the welded corners.
     *
     * The mesh is mutated in place; there is no output slot. Returns true on
     * normal completion, false if BMO_op_initf rejected the input. */
    bool bms_collapse(BMesh *bm,
                      BMEdge **edges, int edges_len,
                      bool uvs);
    /* Invoke BMesh's `connect_verts` operator on the supplied vertex set.
     * For each face carrying two or more of the input verts as corners, the
     * operator inserts edges between selected corner pairs and splits the
     * face along them. Exposes all three BMOP input slots explicitly:
     *
     *   - `verts`            — the candidate corner verts to connect.
     *   - `faces_exclude`    — faces that must not be split, even if they
     *                          carry two or more input verts. May be null
     *                          with a zero length.
     *   - `check_degenerate` — when true, reject splits that would produce
     *                          overlapping or self-intersecting geometry.
     *
     * Returns true on success, false if BMO_op_initf rejected the input. */
    bool bms_connect_verts(BMesh *bm,
                           BMVert **verts, int verts_len,
                           BMFace **faces_exclude, int faces_exclude_len,
                           bool check_degenerate);
    /* Capturing variant of `bms_connect_verts`.
     *
     * Runs the same `connect_verts` BMOP but, in addition to performing the
     * splits, copies the operator's `edges.out` slot (the edges created by
     * the face splits) into the caller-supplied buffer `out_buf` of capacity
     * `out_cap` edge slots.
     *
     * Return value:
     *   -1  on operator init failure (matches the `false` return of the
     *       non-capturing variant).
     *   >= 0 on success: the *total* number of edges the slot produced. Up
     *       to `min(total, out_cap)` pointers are written to `out_buf` (in
     *       the slot's emit order). If the returned count exceeds `out_cap`,
     *       the buffer was undersized.
     *
     * `out_buf` may be null only when `out_cap` is zero; in that case the
     * function still runs the operator and returns the created-edge count
     * for sizing purposes. */
    int bms_connect_verts_out(BMesh *bm,
                              BMVert **verts, int verts_len,
                              BMFace **faces_exclude, int faces_exclude_len,
                              bool check_degenerate,
                              BMEdge **out_buf, int out_cap);
    /* Invoke BMesh's `poke` operator on the supplied face set, splitting each
     * input face into a triangle fan around a freshly-created centre vertex,
     * and capture both of the operator's output slots.
     *
     * Parameters map onto the operator's input slots:
     *   - `faces` / `faces_len`   — the BMFace* set to poke. May be null with
     *                               `faces_len == 0` (a no-op).
     *   - `center_mode`           — centre formula, using the same convention
     *                               as the single-face poke shims:
     *                                 0 = MEAN          (uniform centroid)
     *                                 1 = BOUNDS        (axis-aligned bbox)
     *                                 2 = MEAN_WEIGHTED (edge-length weighted)
     *                               Translated internally to the operator's
     *                               native enum.
     *   - `offset`                — lift of each centre vertex along its source
     *                               face normal.
     *   - `use_relative_offset`   — when true the lift is scaled by the mean
     *                               corner-to-centre distance of each face.
     *
     * The two output slots are copied into caller-allocated buffers:
     *   - `verts.out` -> `out_verts` (one centre vertex per input face).
     *   - `faces.out` -> `out_faces` (the fan-triangle faces; n per input
     *                                 face of n corners).
     * Both slots are populated by filtering the mesh's element lists for the
     * operator's new-element tool flag, so the order is the mesh's element
     * iteration order over the newly-created elements, not a per-input-face
     * grouping.
     *
     * For each slot, up to `min(slot_len, cap)` pointers are written to the
     * buffer and the total `slot_len` is reported through the matching
     * `r_*_len` out-param (which may be null). A returned length greater than
     * its cap signals the buffer was undersized. Either buffer may be null
     * only when its cap is zero (size-probing mode).
     *
     * Returns 0 on success, or -1 if BMO_op_initf rejected the input. */
    int bms_poke_out(BMesh *bm,
                     BMFace **faces, int faces_len,
                     int center_mode, float offset, bool use_relative_offset,
                     BMVert **out_verts, int out_verts_cap, int *r_verts_len,
                     BMFace **out_faces, int out_faces_cap, int *r_faces_len);