src/lib.rs


    /// Invoke BMesh's `dissolve_verts` BMOP on the supplied vertex set.
    /// Both BMOP slot parameters are forwarded explicitly:
    ///
    /// - `use_face_split` — split off face corners around dissolved verts
    ///   so surrounding geometry stays well-formed.
    /// - `use_boundary_tear` — split off face corners on boundary verts
    ///   instead of merging adjacent faces.
    ///
    /// Returns false if the operator rejected the input.
    pub fn bms_dissolve_verts(
        bm: *mut BMesh,
        verts: *mut *mut BMVert,
        verts_len: c_int,
        use_face_split: bool,
        use_boundary_tear: bool,
    ) -> bool;

    /// Invoke BMesh's `dissolve_edges` BMOP on the supplied edge set. Every
    /// BMOP slot parameter is forwarded explicitly:
    ///
    /// - `use_verts` — also dissolve any vert left between exactly two
    ///   surviving edges.
    /// - `use_face_split` — split off face corners so surrounding geometry
    ///   stays well-formed.
    /// - `angle_threshold` — when `use_verts` is true, only dissolve a vert
    ///   if the angle between its remaining two edges is at most this value
    ///   (radians). Pass `std::f32::consts::PI` to disable the limit
    ///   (matches the BMOP's own default).
    ///
    /// Returns false if the operator rejected the input.
    pub fn bms_dissolve_edges(
        bm: *mut BMesh,
        edges: *mut *mut BMEdge,
        edges_len: c_int,
        use_verts: bool,
        use_face_split: bool,
        angle_threshold: f32,
    ) -> bool;

    /// Invoke BMesh's `dissolve_faces` BMOP on the supplied face set.
    /// Partitions the set into edge-adjacent connected components and merges
    /// each component into a single face. Both BMOP slot parameters are
    /// forwarded explicitly:
    ///
    /// - `use_verts` — after merging, also dissolve any vert left between
    ///   exactly two surviving edges.
    ///
    /// Returns false if the operator rejected the input.
    pub fn bms_dissolve_faces(
        bm: *mut BMesh,
        faces: *mut *mut BMFace,
        faces_len: c_int,
        use_verts: bool,
    ) -> bool;

    /// Capturing variant of [`bms_dissolve_faces`].
    ///
    /// Runs the same `dissolve_faces` BMOP and additionally copies the
    /// operator's `region.out` slot — one face pointer per successful
    /// per-region merge — into the caller-supplied buffer `out_buf` of
    /// capacity `out_cap` slots.
    ///
    /// Return value:
    /// - `-1` on operator init failure (mirrors the `false` return of
    ///   the non-capturing variant).
    /// - `>= 0` on success: the *total* merged-face count produced by
    ///   the operator. Up to `min(total, out_cap)` pointers are written
    ///   to `out_buf` in the slot's emit order; if `total > out_cap`
    ///   the buffer was undersized.
    ///
    /// `out_buf` may be null only when `out_cap` is zero (size-probing
    /// mode).
    pub fn bms_dissolve_faces_out(
        bm: *mut BMesh,
        faces: *mut *mut BMFace,
        faces_len: c_int,
        use_verts: bool,
        out_buf: *mut *mut BMFace,
        out_cap: c_int,
    ) -> c_int;

    /// Invoke BMesh's `dissolve_limit` BMOP ("limited dissolve") on the
    /// supplied edge + vert sets. Greedy heap-driven planar / co-linear
    /// dissolve: every candidate within `angle_limit` (radians) is dissolved,
    /// subject to `delimit`.
    ///
    /// Either input buffer may be null with a zero length. Element pointers
    /// must remain valid for the duration of the call.
    ///
    /// - `angle_limit` — maximum dihedral angle (radians) between adjacent
    ///   face normals (edge dissolve) or between the two remaining edges
    ///   (vert dissolve). BMesh internally clamps to `pi/2`; this binding
    ///   forwards the caller's value verbatim.
    /// - `use_dissolve_boundaries` — also dissolve verts lying on mesh
    ///   boundaries (between exactly two wire / boundary edges).
    /// - `delimit` — bitmask of edge attributes that block dissolve across
    ///   them; use the `BMS_DELIM_*` constants below.
    ///
    /// Returns false if the operator rejected the input.
    pub fn bms_dissolve_limit(
        bm: *mut BMesh,
        edges: *mut *mut BMEdge,
        edges_len: c_int,
        verts: *mut *mut BMVert,
        verts_len: c_int,
        angle_limit: f32,
        use_dissolve_boundaries: bool,
        delimit: c_int,
    ) -> bool;

    /// Capturing variant of [`bms_dissolve_limit`].
    ///
    /// Runs the same `dissolve_limit` BMOP and additionally copies the
    /// operator's `region.out` slot — one face pointer per successful
    /// edge-pass merge in heap-pop order — into the caller-supplied
    /// buffer `out_buf` of capacity `out_cap` slots.
    ///
    /// Return value semantics match [`bms_dissolve_faces_out`]: `-1`
    /// on init failure; otherwise the total slot count, with up to
    /// `min(total, out_cap)` pointers written to `out_buf`. `out_buf`
    /// may be null only when `out_cap` is zero (size-probing mode).
    pub fn bms_dissolve_limit_out(
        bm: *mut BMesh,
        edges: *mut *mut BMEdge,
        edges_len: c_int,
        verts: *mut *mut BMVert,
        verts_len: c_int,
        angle_limit: f32,
        use_dissolve_boundaries: bool,
        delimit: c_int,
        out_buf: *mut *mut BMFace,
        out_cap: c_int,
    ) -> c_int;

    /// Invoke BMesh's `dissolve_degenerate` BMOP on the supplied edge set.
    /// Numeric cleanup pass for collapsing zero-length edges and clipping
    /// near-collinear loop ears within a tolerance.
    ///
    /// - `dist` — distance tolerance (world units). Edges whose squared
    ///   length is below `dist * dist` are collapsed; loop ears whose
    ///   collinearity error is at most `dist` are split and the introduced
    ///   joining edge is also collapsed. At `dist = 0` only exact-zero-length
    ///   edges and exactly collinear ears qualify.
    ///
    /// The `edges` buffer may be null with a zero length; the per-edge
    /// length test is gated on the input-flag set so a zero-length input
    /// set is effectively a no-op even if the mesh contains degeneracies.
    /// Pass every edge for a whole-mesh cleanup.
    ///
    /// Returns false if the operator rejected the input.
    pub fn bms_dissolve_degenerate(
        bm: *mut BMesh,
        edges: *mut *mut BMEdge,
        edges_len: c_int,
        dist: f32,
    ) -> bool;

    /// Invoke BMesh's `collapse` BMOP on the supplied edge set. Collapses
    /// each connected group of input edges to a single vertex, welding their
    /// endpoints together and removing the now-degenerate geometry.
    ///
    /// - `edges` — the edges to collapse. The pointer may be null only when
    ///   `edges_len == 0`, in which case nothing is collapsed.
    /// - `uvs` — when true, also blend the per-loop custom data (UVs, vertex
    ///   colours, etc.) of the welded corners.
    ///
    /// The mesh is mutated in place; there is no output. Returns false if the
    /// operator rejected the input, true on normal completion.
    pub fn bms_collapse(
        bm: *mut BMesh,
        edges: *mut *mut BMEdge,
        edges_len: c_int,
        uvs: bool,
    ) -> bool;

    /// Invoke BMesh's `connect_verts` BMOP on the supplied vertex set. For
    /// each face carrying two or more of the input verts as corners, inserts
    /// edges between selected corner pairs and splits the face. All three
    /// input slots are forwarded explicitly:
    ///
    /// - `verts` — the candidate corner verts to connect.
    /// - `faces_exclude` — faces that must not be split; may be null with a
    ///   zero length.
    /// - `check_degenerate` — when true, reject splits that would produce
    ///   overlapping or self-intersecting geometry.
    ///
    /// Element pointers must remain valid for the duration of the call.
    /// Returns false if the operator rejected the input.
    pub fn bms_connect_verts(
        bm: *mut BMesh,
        verts: *mut *mut BMVert,
        verts_len: c_int,
        faces_exclude: *mut *mut BMFace,
        faces_exclude_len: c_int,
        check_degenerate: bool,
    ) -> bool;

    /// Capturing variant of [`bms_connect_verts`].
    ///
    /// Runs the same `connect_verts` BMOP and additionally copies the
    /// operator's `edges.out` slot — the edges created by the face splits —
    /// into the caller-supplied buffer `out_buf` of capacity `out_cap` slots.
    ///
    /// Return value:
    /// - `-1` on operator init failure (mirrors the `false` return of the
    ///   non-capturing variant).
    /// - `>= 0` on success: the *total* created-edge count produced by the
    ///   operator. Up to `min(total, out_cap)` pointers are written to
    ///   `out_buf` in the slot's emit order; if `total > out_cap` the buffer
    ///   was undersized.
    ///
    /// `out_buf` may be null only when `out_cap` is zero (size-probing mode).
    pub fn bms_connect_verts_out(
        bm: *mut BMesh,
        verts: *mut *mut BMVert,
        verts_len: c_int,
        faces_exclude: *mut *mut BMFace,
        faces_exclude_len: c_int,
        check_degenerate: bool,
        out_buf: *mut *mut BMEdge,
        out_cap: c_int,
    ) -> c_int;

    /// Invoke BMesh's `poke` BMOP on a face set and capture both of its
    /// output slots.
    ///
    /// Each input face is split into a triangle fan around a freshly-created
    /// centre vertex. `center_mode` follows the same convention as
    /// [`bms_face_poke_mode`] (`0` = MEAN, `1` = BOUNDS, `2` = MEAN_WEIGHTED)
    /// and is translated internally to the operator's native enum. `offset`
    /// lifts each centre vertex along its source face normal; when
    /// `use_relative_offset` is `true` the lift is scaled by the mean
    /// corner-to-centre distance of each face.
    ///
    /// The operator's two output slots are copied into caller-allocated
    /// buffers:
    /// - `verts.out` -> `out_verts` (one centre vertex per input face).
    /// - `out_verts` must point to `out_verts_cap` writable `*mut BMVert`.
    /// - `faces.out` -> `out_faces` (the fan-triangle faces).
    /// - `out_faces` must point to `out_faces_cap` writable `*mut BMFace`.
    ///
    /// For each slot the total length is written through the matching
    /// `r_*_len` out-param (which may be null); up to `min(len, cap)` pointers
    /// are written to the buffer. A reported length greater than its cap
    /// signals truncation, so callers can re-run on a fresh fixture with a
    /// larger buffer. Both slots are filled in the mesh's element-iteration
    /// order over the newly-created elements, not grouped per input face.
    /// Either buffer may be null only when its cap is zero (size-probing mode).
    ///
    /// Returns `0` on success, or `-1` if the operator rejected the input.
    pub fn bms_poke_out(
        bm: *mut BMesh,
        faces: *mut *mut BMFace,
        faces_len: c_int,
        center_mode: c_int,
        offset: f32,
        use_relative_offset: bool,
        out_verts: *mut *mut BMVert,
        out_verts_cap: c_int,
        r_verts_len: *mut c_int,
        out_faces: *mut *mut BMFace,
        out_faces_cap: c_int,
        r_faces_len: *mut c_int,
    ) -> c_int;
